<resources>
    <string name="app_name">Mercado Libre Demo</string>
    <string name="country_txt">Escoga el pais de su elección:</string>
    <string name="dummy_txt_product">Dummy Text Product</string>
    <string name="dummy_selled_product">484 Vendidos</string>
    <string name="dummy_not_iva">Exento de iva</string>
    <string name="fetch_error_data">Problema convirtiendo data</string>
    <string name="find">Buscar</string>
    <string name="fragment_search">Search Fragment</string>
    <string name="fragment_search_detail">Search Detail Fragment</string>
    <string name="hint_cuotes">en 12x $5.833 sin interes</string>
    <string name="hint_free_shipping">Envio gratis</string>
    <string name="hint_name_user">Hola jean</string>
    <string name="hint_mercado_pago">Mercado Pago</string>
    <string name="hint_selled">5 vendidos</string>
    <string name="hint_money">$2.000</string>
    <string name="hint_search_row">Números de Registros: 50</string>
    <string name="hint_available_stock">Stock Disponible</string>
    <string name="last_available">Últimos Disponibles</string>
    <string name="mercado_pago">Mercado Pago</string>
    <string name="networ_error">no hay conexion</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="navigation_drawer_open">DraweLayout</string>
    <string name="navigation_drawer_close">drawer cerrado</string>
    <string name="recharge_reload_success">Recarga exitosa</string>
    <string name="results_hint">63 Resultados</string>
    <string name="results"> Resultados</string>
    <string name="searchLabel">Busqueda</string>
    <string name="searchHint">Estoy buscando…</string>
    <string name="search_error_title">No encontramos publicaciones</string>
    <string name="search_error_subtitle">Revisa que la palabra este bien escrita</string>
    <string name="search_product">Search Products</string>
    <string name="txt_search_hint_db">Busquedas Hechas por el usuario:</string>
    <string name="mercado_libre">Bienvenido a mercadoLibre</string>
    <string name="mercado_pago_accept">Acepta Mercado Pago</string>
    <string name="loading">Cargando</string>
    <string name="no_products">No hay productos</string>
    <string name="result_search">Resultados de busqueda</string>
    <string name="share_product">Compartir Producto</string>
    <string name="favorite">Favorito</string>
</resources>