<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBackground">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/search_error"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/no_products"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_search_error_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty_four"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:layout_marginEnd="@dimen/margin_twenty_four"
        android:text="@string/search_error_title"
        android:contentDescription="@string/search_error_title"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="@dimen/txt_size_twenty_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
    <TextView
        android:id="@+id/tv_search_error_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty_four"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:layout_marginEnd="@dimen/margin_twenty_four"
        android:text="@string/search_error_subtitle"
        android:contentDescription="@string/search_error_subtitle"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="@dimen/txt_size_twenty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_error_title" />
</androidx.constraintlayout.widget.ConstraintLayout>